# cppxsd

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  notes.md  vcpkg.json
.github/workflows/: build_test.yml
cppxsd/: CMakeLists.txt
cppxsd/src/: main.cpp
libcppxsd/: CMakeLists.txt
libcppxsd/include/cppxsd/: ast.hpp  cppxsd.hpp  resolve_qname.hpp
libcppxsd/src/: CMakeLists.txt  cppxsd.cpp  resolve_qname.cpp
libcppxsd/src/meta/: ast.hpp  ast_new.hpp  types.hpp
libcppxsd/src/output/: CMakeLists.txt  output.cpp  output.hpp
libcppxsd/src/output/cpp/: cpp_output.cpp  cpp_output.hpp  struct_builder.hpp
libcppxsd/src/parser/: CMakeLists.txt  defs.hpp  exceptions.cpp  exceptions.hpp  helpers.hpp  keys.cpp  keys.hpp  nodes.hpp  parser.cpp  parser.hpp  process_annotation.cpp  process_choice.cpp  process_complexContent.cpp  process_complexType.cpp  process_documentation.cpp  process_element.cpp  process_extension.cpp  process_group.cpp  process_include.cpp  process_node.cpp  process_restriction.cpp  process_schema.cpp  process_sequence.cpp  process_simpleType.cpp  state.hpp  types.hpp
libcppxsd/tests/: CMakeLists.txt
libcppxsd/tests/schemas/: XMLSchema.xsd  customer.xsd
libcppxsd/tests/src/: helpers.hpp  list.cpp  restriction.cpp  schema.cpp  simpleType.cpp  union.cpp
